<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:contentPaddingTop="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingBottom="10dp"
        android:contextClickable="true"
        android:contentDescription="Detail"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:cardCornerRadius="35dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="17dp"
        android:outlineSpotShadowColor="@color/light_ferozi"
        app:cardBackgroundColor="#FFFB"
        >
       <RelativeLayout
           android:id="@+id/clickedline"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:id="@+id/image"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:layout_marginTop="80dp"
               android:src="@drawable/ic_baseline_person_24"/>
           <LinearLayout

               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toRightOf="@id/image"
               android:orientation="vertical">
               <TextView
                   android:id="@+id/phonemahasiswa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hint_phone"
                   android:textColor="@color/black"/>
               <TextView
                   android:id="@+id/nimmahasiswa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/nikkaryawan"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"/>
               <TextView
                   android:id="@+id/namamahasiswa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/namakaryawan"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"/>
               <TextView
                   android:id="@+id/jkmahasiswa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/jender_karyawan"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"/>
               <TextView
                   android:id="@+id/emailmahasiswa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hint_email"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"/>
               <TextView
                   android:id="@+id/alamatmahasiswa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/alamatkaryawan"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"/>
               <TextView
                   android:id="@+id/periodemahasiswa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/tanggalkaryawan"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"/>
               <TextView
                   android:id="@+id/jurusanmahasiswa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/jurusan"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"/>
               <TextView
                   android:id="@+id/fakultasmahasiswa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/fakultas"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"/>
           </LinearLayout>
       </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>